# aoc

./: .cursorignore  .gitignore  .gitmodules  Cargo.toml  README.md  bench.md  bench.sh  notes.md
2021/: Cargo.toml  bench.md  notes.md
2021/day1/: Cargo.toml
2021/day10/: Cargo.toml  soln1_lazy_static_expanded.rs.ignore
2021/day13/: Cargo.toml
2021/day14/: perf.md
2021/day15/: Cargo.toml
2021/day16/: Cargo.toml  problem.md
2021/day18/: Cargo.toml
2021/day19/: Cargo.toml  notes.md
2021/day20/: Cargo.toml
2021/day22/: notes.md
2021/day24/: notes.md  opt-report.txt  prog.bc  prog.cpp  prog.opt.yaml
2021/day4/: Cargo.toml
2021/day5/: Cargo.toml  bench.md  dhat-heap.json
2021/day7/: Cargo.toml
2022/: README.md  bench.md  benchmark_summary.csv  benchmark_summary.json  benchmark_summary.txt  benchmarks.py  genday.sh  justfile  notes.md  summarize_bench.py
2022/cpp/: aoc2022.cpp  day1.cpp  meson.build
2022/day03/: Cargo.toml
2022/day03/benches/: corebench.rs
2022/day03/src/: main.rs
2022/day06/: Cargo.toml
2022/day07/: Cargo.toml
2022/day2/: Cargo.toml
2022/day5/: Cargo.toml
2022/day6/: Cargo.toml
2022/day8/: Cargo.toml
2022/day9/: Cargo.toml
2022/inputs/: day16.txt  sample09.txt
2022/python/: bench.py  justfile  runner.py  util.py
2022/rust/: bench.md  genday.sh  justfile  run.sh
2022/rust/day13/: Cargo.toml
2022/rust/day13/benches/: corebench.rs
2022/rust/day13/src/: lib.rs  main.rs  shared.rs  soln1.rs
2022/template/: Cargo.toml
2023/: README.md  bench.csv  bench.md  benchmark_summary.csv  benchmark_summary.txt  justfile  notes.md  summarize_bench.py
2023/cpp/: aoc2023.cpp  meson.build
2023/inputs/: sample12.txt
2023/puzzles/: day01.md  day02.md  day05.md  day09.md  day11.md  day13.md  day14.md  day15.md  day16.md  day18.md  day20.md
2023/python/: bench.py  bench_config.py  genday.sh  justfile  runner.py  util.py
2023/reference/: 12.py  14.rs  17.py  21.py  4.rs  6.rs  7.py  8.rs  codeforces.rs  day03-ruby.rb  numparse.rs  pyguy.txt
2023/rust/: Cargo.toml  justfile  rustfmt.toml
2023/rust/day01/: Cargo.toml
2023/rust/day01/benches/: corebench.rs
2023/rust/day01/src/: main.rs  soln1.rs
2023/rust/day05/: Cargo.toml
2023/rust/day05/benches/: corebench.rs
2023/rust/day05/src/: main.rs  shared.rs  soln1.rs
2023/rust/day07/: Cargo.toml
2023/rust/day07/benches/: corebench.rs
2023/rust/day07/src/: main.rs  shared.rs  soln1.rs
2023/rust/experiments/: Cargo.toml
2023/rust/experiments/benches/: corebench.rs
2023/rust/experiments/src/: base64.rs  lib.rs  main.rs  popcnt.rs
2023/rust/util/: Cargo.toml
2023/rust/util/src/: grid.rs  lib.rs  num.rs  perf.rs
day1/: Cargo.toml
day1/benches/: corebench.rs
day1/src/: main.rs  soln.rs  soln1.rs
day10/: Cargo.toml
day10/benches/: corebench.rs
day10/src/: main.rs  shared.rs  soln1.rs
day11/: Cargo.toml
day11/benches/: corebench.rs
day11/src/: main.rs  soln1.rs
day12/: Cargo.toml  notes.md
day12/benches/: corebench.rs
day12/src/: main.rs  notes.md  shared.rs  soln1.rs
day13/: Cargo.toml
day13/benches/: corebench.rs
day13/src/: main.rs  shared.rs  soln1.rs
day14/: Cargo.toml  perf.md
day14/benches/: corebench.rs
day14/src/: main.rs  shared.rs  soln1.rs  soln2.rs
day15/: Cargo.toml
day15/benches/: corebench.rs
day15/inputs/: sample2.txt
day15/src/: main.rs  shared.rs  soln1.rs
day16/: Cargo.toml
day16/benches/: corebench.rs
day16/src/: main.rs  shared.rs  soln1.rs
day17/: Cargo.toml
day17/benches/: corebench.rs
day17/src/: main.rs  shared.rs  soln1.rs
day18/: notes.md  problem.txt
day18/benches/: corebench.rs
day18/src/: lib.rs  main.rs  shared.rs  soln1.rs
day19/: Cargo.toml  problem.txt
day19/benches/: corebench.rs
day19/src/: main.rs  shared.rs  soln1.rs
day2/: Cargo.toml
day2/benches/: corebench.rs
day2/src/: main.rs  soln.rs  soln1.rs
day20/benches/: corebench.rs
day20/src/: main.rs  shared.rs  soln1.rs
day22/: Cargo.toml
day22/inputs/: sample2.txt
day22/src/: main.rs  shared.rs  soln1.rs
day23/: Cargo.toml
day23/benches/: corebench.rs
day23/inputs/: day23.txt
day23/src/: main.rs  shared.rs  soln1.rs
day24/: Cargo.toml  notes.md  prog.ll
day24/inputs/: inp1.txt
day24/src/: alu.rs  lib.rs  main.rs  shared.rs  soln1.rs
day25/: Cargo.toml
day3/: Cargo.toml
day4/: Cargo.toml
day5/: Cargo.toml  bench.md  bench.sh
day6/: Cargo.toml
day6/benches/: corebench.rs
day6/src/: main.rs  soln.rs
day7/: Cargo.toml
day8/: Cargo.toml
day9/: Cargo.toml
day9/benches/: corebench.rs
day9/src/: main.rs  shared.rs  soln1.rs
src/: main.rs
util/: Cargo.toml
(+398 files in other folders)
