[package]
name = "day12"
version = "0.1.0"
authors = ["Ankit Soni <ankitsoni9@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] } 

[dependencies]
itertools = "0.10.3"
# reqwest = { version = "0.11", features = ["json"] }

[[bench]]
name = "corebench"
harness = false
