[package]
name = "day6"
version = "0.1.0"
authors = ["Ankit Soni <ankitsoni9@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3.5"

[dependencies]

[[bench]]
name = "corebench"
harness = false
