[package]
name = "day13"
version = "0.1.0"
authors = ["Ankit Soni <ankitsoni9@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[dependencies]
dhat = "*"
itertools = "*"
scan_fmt = "*"
regex = "*"
nom = "*"

[features]
heapprofile = []


[[bench]]
name = "corebench"
harness = false
