[package]
name = "day01"
version = "0.1.0"
authors = ["Ankit Soni <dev@ankitson.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[dependencies]
dhat = "*"
itertools = "*"
scan_fmt = "*"
regex = "*"
memchr = "*"
util = { path = "../util" }

[features]
heapprofile = []


[[bench]]
name = "corebench"
harness = false
